# MyCourseIndex

./: .gitignore  .travis.yml  README.md  app.py  charts.py  deployment.dev.yaml  deployment.dev.yml  deployment.yaml  dockerfile  generate_simstring_db.py  package-lock.json  preprocess.ipynb  preprocess.py  pyproject.toml  sample.csv  sample_data.json  sample_data_preprocessed.p
app/: API.md  __init__.py  auth.py  forms.py
app/openapi/: spec.yml
app/q_and_a/: __init__.py  class_context.py  interrogativeNLP.py  pipeline.py  sample.py
app/search/: __init__.py  boolean_search.py  concept_mapping.py  pair_rank_tests.py  similarity.py
app/templates/: main.html
app/utils/: __init__.py  pdfparse.py  signup_data.py  simstring_doc.py  split_vectorizer.py  toke.py  tokenize.py  utils.py  vectorizer.py
client/: README.md  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.css  App.jsx  App.tsx  index.css  index.tsx  indexApp.tsx
client/src/actions/: index.ts
client/src/components/: About.tsx  CourseSelection.tsx  Mediacardnomodal.tsx  Outline.tsx  Policy.tsx  ProfForm.tsx  Result.tsx  ResultsList.jsx  ResultsView.tsx  SearchBox.tsx  Terms.tsx  addCourseCard.tsx
client/src/config/: adalConfig.ts
client/src/containers/: Home.tsx
client/src/images/: doneloading.json
client/src/reducers/: QAReducer.ts  coursesReducer.ts  foldersReducer.ts  formCLReducer.ts  formCNReducer.ts  formCSVReducer.ts  formEmailReducer.ts  formPLReducer.ts  index.ts  orderReducer.ts  radioButtonReducer.ts  resultsReducer.ts  rvReducer.ts  selectedcourseReducer.ts  tagsReducer.ts
client/src/style/: About.css  CourseSelection.css  Loader.css  Modal.css  Outline.css  Policy.css  ProfForm.css  Result.css  ResultsView.css  SearchBox.css  Terms.css
concept_matching/: install_quickdb.py
concept_matching/definition_files/: MRCONSO.RRF  MRSTY.RRF
concept_matching/quickUCSLS/umls-simstring.db/: umls-terms.simstring.23.cdb  umls-terms.simstring.6.cdb
concept_matching/quickUCSLS_10940/umls-simstring.db/: umls-terms.simstring.15.cdb  umls-terms.simstring.24.cdb
concept_matching/quickUCSLS_10960/umls-simstring.db/: umls-terms.simstring.8.cdb
concept_matching/quickUCSLS_11018/umls-simstring.db/: umls-terms.simstring.20.cdb
concept_matching/quickUCSLS_12283/umls-simstring.db/: umls-terms.simstring.5.cdb
concept_matching/quickUCSLS_45531/umls-simstring.db/: umls-terms.simstring  umls-terms.simstring.18.cdb
concept_matching/quickUCSLS_45577/umls-simstring.db/: umls-terms.simstring.16.cdb
concept_matching/quickUCSLS_46286/umls-simstring.db/: umls-terms.simstring.14.cdb  umls-terms.simstring.3.cdb
concept_matching/quickUCSLS_46817/umls-simstring.db/: umls-terms.simstring.1.cdb
concept_matching/quickUCSLS_60629/umls-simstring.db/: umls-terms.simstring.13.cdb
concept_matching/quickUCSLS_61383/umls-simstring.db/: umls-terms.simstring.12.cdb  umls-terms.simstring.25.cdb  umls-terms.simstring.30.cdb  umls-terms.simstring.7.cdb
concept_matching/quickUCSLS_61505/umls-simstring.db/: umls-terms.simstring.11.cdb  umls-terms.simstring.2.cdb  umls-terms.simstring.35.cdb
cosineSimilarity/: Cosine.py  utils.py
crf/: README.md  pyproject.toml  train.py
crf/model/: crf.py  feature.py
crf/utils/: exceptions.py  read_conll.py
deployment-setup/: README.md  deploy-terraform.sh  dockerfile  install_tools.sh
deployment-setup/build_scripts/: build-docker.sh  deploy-k8s.sh  deploy-terraform.sh  inject-secrets.sh  install-dependencies.sh  kube-secrets.txt.enc  kubeconfig  nginx-tutorial.md
deployment-setup/cert-manager/: cert-manager-iam-setup.tf  cert-manager-role-rights.json  cert-manager.md  cluster-issuer.yaml  main.tf
deployment-setup/external_dns/: external-dns-iam-setup.tf  external_dns.yaml  main.tf  pod-role-trust-policy.json
deployment-setup/k8s/: kubernetes.tf
deployment-setup/kube2iam/: kube2iam-ds.yaml
deployment-setup/prereqs/: kops_prereqs.tf  main.tf
deployment-setup/rbac/: external-dns-service-account-role-binding.yaml  kube2iam-service-account-role-binding.yaml
docs/: Dockerfile  Makefile  doc_deployment.yaml
docs/source/: conf.py  foreword.rst  index.rst  piazza.rst  quickucsls.rst  references.rst  simstring.rst
edstem-api/: pyproject.toml
edstem-api/edstem_api/: api.py  macros.py
lambdas/mci-edstem-connect/: INSTALL.md  api.py  exceptions.py  macros.py  mci_edstem_connector.py  pyproject.toml  requirements.txt
lambdas/mci-es-deploy/: INSTALL.md  auth.py  handler.py  package-lock.json  package.json  pyproject.toml  query_config.py  serverless.yml
piazza-api/: README.md  pyproject.toml
piazza-api/piazza_api/: __init__.py  course.py  exceptions.py  piazza.py  piazza_jrpc.py
postgres/: Dockerfile  init.sql
preinstallation-scripts/: install_poetry.sh  install_pyenv.sh
preprocess/: preprocess-utils.py  preprocess.ipynb  preprocess.py  preprocessquery.py  preprocessutils.py
q_and_a/: MCI_faiss.db  answer_selection.py  app.py  baseline_eval.py  class_context.py  cosine.py  docker-compose.yml  dockerfile  faiss_document_store.db  haystack_test_faiss.db  haystack_test_faiss_config  interrogativeNLP.py  local_index.json  pa_r_cossim.py  passage_retrieval.py  pipeline.py  preprocess_data.py  requirements.txt  sample.py  unans_with_bert.py  unanswerable.py  unanswerable2.py
(+86 files in other folders)
