[tool.poetry]
name = "piazza"
version = "0.1.0"
description = "CS4300 Piazza final project"
authors = ["Magd Bayoumi <mb2363@cornell.edu>, Jenna Kressin <jek343@cornell.edu>, Souleiman Benhida <sb2342@cornell.edu>, Sheetal Athrey <spa42@cornell.edu>, Oscar So <ons4@cornell.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.12.12"
flask = "^1.1.1"
numpy = "^1.18.1"
matplotlib = "^3.2.0"
torch = "^1.4.0"
sklearn = "^0.0"
jwt = "^0.6.1"
connexion = "^2.6.0"
piazza-api = {file = "./piazza-api/dist/piazza_api-0.1.0-py3-none-any.whl"}
gunicorn = "^20.0.4"
html2text = "^2020.1.16"
pyjwt = "^1.7.1"
cryptography = "^2.9"
spacy = "^2.2.4"
nltk = "^3.5"
spacy-lookups-data = "^0.2.0"
"pdfminer.six" = "^20200402"
xmltodict = "^0.12.0"
multiset = "^2.1.1"
quickumls = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-mock = "^1.12"
xdoctest = "^0.10.3"
coverage = "^4.5"
flake8 = "^3.7"
flake8-docstrings = "^1.5"
flake8-rst-docstrings = "^0.0.12"
darglint = "^1.1"
isort = {version = "^4.3", extras = ["pyproject"]}
seed-isort-config = "^1.9"
pre-commit = "^1.20"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"
sphinx_pdj_theme = "^0.1.5"
pallets_sphinx_themes = "^1.2.3"
sphinxcontrib-openapi = "^0.6.0"
keyring = "^21.0.0"
artifacts-keyring = "^0.2.8-rc.0"
tox = "^3.14.3"
pytorch_sphinx_theme = "^0.0.19"
sphinxcontrib-katex = "^0.6.0"
tqdm = "^4.43.0"
connexion = {extras = ["swagger-ui"], version = "^2.6.0"}

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38
[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run python -m pytest
"""

[tool.isort]
known_first_party = 'piazza'
known_third_party = ["matplotlib", "numpy", "pallets_sphinx_themes"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"