[tool.poetry]
name = "crf"
version = "0.1.0"
description = ""
authors = ["Magd Bayoumi <mb2363@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
scipy = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
