[tool.poetry]
name = "edstem-api"
version = "0.1.0"
description = ""
authors = ["Magd Bayoumi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pywsse = "^0.1.5"
six = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
