[tool.poetry]
name = "mci-serverless-es"
version = "0.1.0"
description = ""
authors = ["Magd Bayoumi"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
elasticsearch = "^7.12.0"
cryptography = "^3.4.7"
PyJWT = "^2.0.1"
boto3 = "^1.17.43"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
